--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/eptaccio/users#readme",
   "dependencies": {
-    "ava": "^2.0.0"
+    "ava": "^2.0.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "helmet": "^3.18.0"
   }
 }
