--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Users challenge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava",
+    "test:watch": "ava --watch"
   },
   "repository": {
     "type": "git",
