--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://bitbucket.org/eptaccio/users#readme",
   "dependencies": {
     "ava": "^2.0.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "helmet": "^3.18.0"
