--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Users challenge",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "ava",
     "test:watch": "ava --watch"
   },
@@ -16,10 +17,14 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/eptaccio/users#readme",
   "dependencies": {
+    "@elastic/elasticsearch": "^6.8.0",
     "ava": "^2.0.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "helmet": "^3.18.0"
+    "express-winston": "^3.1.0",
+    "helmet": "^3.18.0",
+    "winston": "^3.2.1",
+    "winston-elasticsearch": "^0.7.12"
   }
 }
